"fake" linear gradient light approximating parabolic

--- a/index2.html
+++ b/index2.html
@@ -106,7 +106,6 @@
 	}
 </script>
 
-
 <script id="xpositive-weak-fs" type="x-shader/x-fragment">
 	precision mediump float;
 	varying vec2 vTextureCoord;
@@ -120,6 +119,25 @@
 		//want this light to iso - (-x) - here the dark part of the sky is sharper than the light part
 		
 		float total = texSampleLinear.x + 0.25*texSampleSquare.y + 0.25*texSampleSquare.z;
+
+		gl_FragColor = vec4(vec3(pow(total,0.455)), 1.0);
+	}
+</script>
+
+<script id="xpositive-fake-fs" type="x-shader/x-fragment">
+	precision mediump float;
+	varying vec2 vTextureCoord;
+	uniform sampler2D uSamplerLinear;
+	uniform sampler2D uSamplerSquare;
+	
+	void main(void) {
+		vec4 texSampleLinear = texture2D(uSamplerLinear, vTextureCoord);
+		vec4 texSampleSquare = texture2D(uSamplerSquare, vTextureCoord);
+
+		//make a fake strong light using just linear/omni. resulting light from some part of sky will be negative, but should only 
+		//affect contrived situations eg bottom of well below negative sky.
+		
+		float total = texSampleLinear.x - 0.2* (texSampleSquare.x + texSampleSquare.y + texSampleSquare.z);
 
 		gl_FragColor = vec4(vec3(pow(total,0.455)), 1.0);
 	}
@@ -189,6 +207,10 @@ function initShaders(){
 		uniforms:["uPMatrix","uMVMatrix","uSamplerLinear","uSamplerSquare"]
 	});
 	shaderPrograms["+x weak"] = loadShader( "simple-vs", "xpositive-weak-fs",{
+		attributes:["aVertexPosition","aTextureCoord"],
+		uniforms:["uPMatrix","uMVMatrix","uSamplerLinear","uSamplerSquare"]
+	});
+	shaderPrograms["+x fake"] = loadShader( "simple-vs", "xpositive-fake-fs",{
 		attributes:["aVertexPosition","aTextureCoord"],
 		uniforms:["uPMatrix","uMVMatrix","uSamplerLinear","uSamplerSquare"]
 	});
@@ -389,7 +411,7 @@ function init(){
 	document.body.appendChild( stats.dom );
 	
 	gui = new dat.GUI();
-	gui.add(guiParams, 'lightType', ['+x','+x even','+x weak','-x']);
+	gui.add(guiParams, 'lightType', ['+x','+x even','+x weak','+x fake','-x']);
 	
 	canvas = document.getElementById("mycanvas");
 
