--- a/index2.html
+++ b/index2.html
@@ -65,9 +65,15 @@
 	uniform sampler2D uSamplerSquare;
 	uniform sampler2D uSamplerCross;
 	
-	uniform vec4 uLinearWeights;
-	uniform vec4 uSquareWeights;
-	uniform vec4 uCrossWeights;
+	uniform vec4 uLinearWeightsR;
+	uniform vec4 uLinearWeightsG;
+	uniform vec4 uLinearWeightsB;
+	uniform vec4 uSquareWeightsR;
+	uniform vec4 uSquareWeightsG;
+	uniform vec4 uSquareWeightsB;
+	uniform vec4 uCrossWeightsR;
+	uniform vec4 uCrossWeightsG;
+	uniform vec4 uCrossWeightsB;
 	uniform vec4 uColorTint;	//should just be 0/1 for "correct" radiosity. better approximation of intermediate 
 								//albedos might be acheived by raising textures to a power.
 
@@ -76,8 +82,10 @@
 		vec4 texSampleSquare = texture2D(uSamplerSquare, vTextureCoord);
 		vec4 texSampleCross = texture2D(uSamplerCross, vTextureCoord);
 
-		float total = dot(uLinearWeights, texSampleLinear) + dot(uSquareWeights, texSampleSquare) + dot(uCrossWeights, texSampleCross);
-		gl_FragColor = uColorTint * vec4(vec3(pow(total,0.455)), 1.0);
+		float totalR = dot(uLinearWeightsR, texSampleLinear) + dot(uSquareWeightsR, texSampleSquare) + dot(uCrossWeightsR, texSampleCross);
+		float totalG = dot(uLinearWeightsG, texSampleLinear) + dot(uSquareWeightsG, texSampleSquare) + dot(uCrossWeightsG, texSampleCross);
+		float totalB = dot(uLinearWeightsB, texSampleLinear) + dot(uSquareWeightsB, texSampleSquare) + dot(uCrossWeightsB, texSampleCross);
+		gl_FragColor = uColorTint * vec4((pow(vec3(totalR,totalG,totalB),vec3(0.455))), 1.0);
 	}
 </script>
 
@@ -225,7 +233,11 @@ function initShaders(){
 	});
 	shaderPrograms.fixedweights = loadShader( "simple-vs", "fixedweights-fs",{
 		attributes:["aVertexPosition","aTextureCoord"],
-		uniforms:["uPMatrix","uMVMatrix","uSamplerLinear","uSamplerSquare","uSamplerCross","uLinearWeights","uSquareWeights","uCrossWeights","uColorTint"]
+		uniforms:["uPMatrix","uMVMatrix","uSamplerLinear","uSamplerSquare","uSamplerCross",
+			"uLinearWeightsR","uSquareWeightsR","uCrossWeightsR",	//TODO use matrices
+			"uLinearWeightsG","uSquareWeightsG","uCrossWeightsG",
+			"uLinearWeightsB","uSquareWeightsB","uCrossWeightsB",
+			"uColorTint"]
 	});
 	
 }
@@ -369,10 +381,35 @@ function drawWorldScene(frameTime) {
 		}
 	}
 
+	var simpleOmniWeights = [0,0,0, 1,1,1];
+
+	//blend grayscale with omni. colour weights = skycolor * omni weights + (suncolor-skycolor)* grayscaleWeight
+	cWeightsR = cWeights;
+	var skyR = skyColorVec[0];
+	var sunDiffR = sunColorVec[0] - skyColorVec[0];
+	cWeightsR = cWeights.map( (elem,ii) => elem*sunDiffR + simpleOmniWeights[ii]*skyR);
+	crossWeightsR = crossWeights.map( elem => elem*sunDiffR);
+	cWeightsG = cWeights;
+	var skyG = skyColorVec[1];
+	var sunDiffG = sunColorVec[1] - skyColorVec[1];
+	cWeightsG = cWeights.map( (elem,ii) => elem*sunDiffG + simpleOmniWeights[ii]*skyG);
+	crossWeightsG = crossWeights.map( elem => elem*sunDiffG);
+	cWeightsB = cWeights;
+	var skyB = skyColorVec[2];
+	var sunDiffB = sunColorVec[2] - skyColorVec[2];
+	cWeightsB = cWeights.map( (elem,ii) => elem*sunDiffB + simpleOmniWeights[ii]*skyB);
+	crossWeightsB = crossWeights.map( elem => elem*sunDiffB);
+
 	//console.log(cWeights);
-	gl.uniform4f(activeProg.uniforms.uLinearWeights, cWeights[0],cWeights[1],cWeights[2],0);
-	gl.uniform4f(activeProg.uniforms.uSquareWeights, cWeights[3],cWeights[4],cWeights[5],0);
-	gl.uniform4f(activeProg.uniforms.uCrossWeights, crossWeights[0],crossWeights[1],crossWeights[2],0);
+	gl.uniform4f(activeProg.uniforms.uLinearWeightsR, cWeightsR[0],cWeightsR[1],cWeightsR[2],0);
+	gl.uniform4f(activeProg.uniforms.uLinearWeightsG, cWeightsG[0],cWeightsG[1],cWeightsG[2],0);
+	gl.uniform4f(activeProg.uniforms.uLinearWeightsB, cWeightsB[0],cWeightsB[1],cWeightsB[2],0);
+	gl.uniform4f(activeProg.uniforms.uSquareWeightsR, cWeightsR[3],cWeightsR[4],cWeightsR[5],0);
+	gl.uniform4f(activeProg.uniforms.uSquareWeightsG, cWeightsG[3],cWeightsG[4],cWeightsG[5],0);
+	gl.uniform4f(activeProg.uniforms.uSquareWeightsB, cWeightsB[3],cWeightsB[4],cWeightsB[5],0);
+	gl.uniform4f(activeProg.uniforms.uCrossWeightsR, crossWeightsR[0],crossWeightsR[1],crossWeightsR[2],0);
+	gl.uniform4f(activeProg.uniforms.uCrossWeightsG, crossWeightsG[0],crossWeightsG[1],crossWeightsG[2],0);
+	gl.uniform4f(activeProg.uniforms.uCrossWeightsB, crossWeightsB[0],crossWeightsB[1],crossWeightsB[2],0);
 
 	var tint = colorTints[guiParams.tint];
 	gl.uniform4f(activeProg.uniforms.uColorTint, tint[0],tint[1],tint[2],1);
@@ -452,12 +489,14 @@ function initTexture(baseObj, textureKey, src) {
 }
 
 var guiParams={
-	lightType:'+x',
+	lightType:'custom custom',
 	tint:"white",
 	customLightAng:0,
 	customLightElev:0,
 	customCustomLightSharp:1,
-	textureType:'png'
+	textureType:'png',
+	sunColor:'#ffffff',
+	skyColor:'#000000',
 	};
 
 var textures={};
@@ -465,6 +504,22 @@ var jpgTextures={};
 
 var turnAng=Math.PI/2;
 var pitchAng=0;
+var sunColorVec=[0,0,0];
+var skyColorVec=[0,0,0];
+
+function setColor(inputObject,color){
+	var colorArr=colorArrFromUiString(color);
+	for (var cc=0;cc<3;cc++){
+		inputObject[cc] = Math.pow(colorArr[cc],2.2);
+	}
+}
+function colorArrFromUiString(color){
+	var r = parseInt(color.substring(1,3),16) /255;
+	var g = parseInt(color.substring(3,5),16) /255;
+	var b = parseInt(color.substring(5,7),16) /255;
+	return [r,g,b];
+}
+
 
 function init(){
 	
@@ -479,6 +534,12 @@ function init(){
 	gui.add(guiParams, 'customLightElev',-90,90,15);
 	gui.add(guiParams, 'customCustomLightSharp',-2,2,.1);
 	gui.add(guiParams, 'textureType',['png','jpg']);
+	gui.addColor(guiParams, 'sunColor').onChange(function(color){
+		setColor(sunColorVec,color);
+	});
+	gui.addColor(guiParams, 'skyColor').onChange(function(color){
+		setColor(skyColorVec,color);
+	});
 
 	canvas = document.getElementById("mycanvas");
 
@@ -509,7 +570,9 @@ function init(){
 	initGL();
 	
 	initShaders();
-	
+	setColor(sunColorVec,guiParams.sunColor);
+	setColor(skyColorVec,guiParams.skyColor);
+
 	initTexture(textures,'linear', "res/sundial/linear_terms_bake1.png");
 	initTexture(textures,'squared', "res/sundial/square_terms_bake1.png");
 	initTexture(textures,'cross', "res/sundial/cross_terms_bake1.png");
